# dandi-notebook-gen

./: .gitignore  README.md  example.py  pyproject.toml
dandi_notebook_gen/: __init__.py  cli.py  generator.py  instructions.md  instructions_experimental.md  instructions_scientific_findings.md  instructions_v2.txt  logger.py  run_completion.py  script_runner.py  system_prompt.md  tools.py
from_other_project/: run_completion.py  tools.py
tests/: __init__.py  test_cli.py  test_generator.py  test_logger.py  test_script_runner.py
