[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dandi-notebook-gen"
version = "0.1.0"
description = "Python package for generating notebooks for Dandisets"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "click",
    "jupyter",
    "jupytext",
    "dandi",
    "requests",
    "python-dotenv",
]

[project.scripts]
dandi-notebook-gen-tools = "dandi_notebook_gen.cli:main"
dandi-notebook-gen = "dandi_notebook_gen.cli:notebook_gen_main"

[tool.hatch.build.targets.wheel]
packages = ["dandi_notebook_gen"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
